# immagent-py

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  README.md  pyproject.toml  questions.txt
.github/workflows/: ci.yml  publish.yml
examples/: Makefile  basic_chat.py  helpers.py  mcp_tools.py  simple.py  weather_server.py  web_reader.py
src/immagent/: __init__.py  advance.py  agent.py  api.py  assets.py  cache.py  db.py  exceptions.py  llm.py  mcp.py  messages.py  persistent.py  registry.py  simple.py  store.py  turn.py
tests/: conftest.py  test_api.py  test_assets.py  test_llm_integration.py  test_mcp.py  test_simple.py
