[project]
name = "immagent"
version = "0.1.0"
description = "Immutable agent architecture with UUID-based identity"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Kleanthes Koniaris", email = "kleanthes@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm",
    "asyncpg",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "testcontainers[postgres]",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Suppress third-party deprecation warnings
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
    "ignore:enable_cleanup_closed ignored:DeprecationWarning",
    # Suppress LiteLLM/Pydantic serialization warnings
    "ignore:Pydantic serializer warnings:UserWarning",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.407",
]
